objects/EUR_CRM_Pros_Volume_Potential__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria Threshold</label>
        <referenceTo>EUR_CRM_Criteria_Threshold__c</referenceTo>
        <relationshipName>EUR_PROS_Pros_Volume_Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Pros_Segmentation__c</fullName>
        <label>Pros Segmentation</label>
        <referenceTo>EUR_CRM_Pros_Segmentation__c</referenceTo>
        <relationshipName>EUR_PROS_Pros_Volume_Potentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Statement__c</fullName>
        <formula>EUR_CRM_Criteria_Threshold__r.EUR_CRM_Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Pros Volume Potential (EU)</label>
    <listViews>
        <fullName>EUR_GB_PROS_Volume_Potential</fullName>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>EUR GB PROS Volume Potential</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Pros_Segmentation__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>NGN</value>
        </filters>
        <label>EUR NG</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VP-{00000}</displayFormat>
        <label>Pros Volume Potential No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pros Volume Potential (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRT_ProsVolumePotential</fullName>
        <active>true</active>
        <label>EUR_PRT_ProsVolumePotential</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>